...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateEventInvitationActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/privateSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:text="@string/set_to_private"
...
        android:id="@+id/timeSlotsChosenTextView"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="showDueDatePickerDialog"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginTop="10dp"
        android:text="@string/other_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueTimeTextView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="invitePeople"
        android:text="@string/invite"
        app:layout_constraintStart_toEndOf="@+id/inviteEmailEditText"
        app:layout_constraintTop_toTopOf="@+id/inviteEmailEditText" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="showDueTimePickerDialog"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/button10"
...
        android:onClick="showDatePickerDialog"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <Button
        android:id="@+id/submitCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:onClick="submitCreateEvent"
        app:layout_constraintStart_toEndOf="@+id/cancelCreateButton"
        app:layout_constraintTop_toBottomOf="@+id/privateSwitch" />

    <Button
        android:id="@+id/cancelCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:onClick="cancelCreate"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privateSwitch" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Spinner
        android:id="@+id/eventTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/event_type_array"
        android:minHeight="48dp"
...
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:onClick="addTimeSlots"
        android:text="Add"
        app:layout_constraintEnd_toEndOf="@+id/button11"
...
