...
        android:onClick="updateInfo"
        android:text="Update Info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="goToEventHistory"
        android:text="Manage Invitations"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
...
